[gd_scene load_steps=2 format=2]

[ext_resource path="res://Preset_Tabs/Internal_Standard_Tab/Internal_Standard_Tab.gd" type="Script" id=1]

[node name="ISTab" type="Tabs"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="Spacer" type="MarginContainer" parent="."]
margin_left = 15.0
margin_top = 15.0
margin_right = 924.0
margin_bottom = 585.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="HBoxContainer" type="HBoxContainer" parent="Spacer"]
margin_right = 909.0
margin_bottom = 570.0

[node name="LeftSpace" type="MarginContainer" parent="Spacer/HBoxContainer"]
margin_right = 452.0
margin_bottom = 570.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="VBoxContainer" type="VBoxContainer" parent="Spacer/HBoxContainer/LeftSpace"]
margin_right = 452.0
margin_bottom = 570.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="CompoundNameContainer2" type="HBoxContainer" parent="Spacer/HBoxContainer/LeftSpace/VBoxContainer"]
margin_right = 452.0
margin_bottom = 24.0
size_flags_horizontal = 3

[node name="Description" type="Label" parent="Spacer/HBoxContainer/LeftSpace/VBoxContainer/CompoundNameContainer2"]
margin_right = 203.0
margin_bottom = 24.0
size_flags_horizontal = 3
size_flags_vertical = 7
text = "Compound Name"
valign = 1

[node name="CompoundNameEdit" type="LineEdit" parent="Spacer/HBoxContainer/LeftSpace/VBoxContainer/CompoundNameContainer2"]
margin_left = 207.0
margin_right = 411.0
margin_bottom = 24.0
size_flags_horizontal = 3
size_flags_vertical = 3
align = 1
placeholder_text = "insert compound name"

[node name="Unit" type="Label" parent="Spacer/HBoxContainer/LeftSpace/VBoxContainer/CompoundNameContainer2"]
margin_left = 415.0
margin_right = 452.0
margin_bottom = 24.0
size_flags_vertical = 1
text = "ng/ml"
align = 1
valign = 1
percent_visible = 0.0

[node name="ISNameContainer" type="HBoxContainer" parent="Spacer/HBoxContainer/LeftSpace/VBoxContainer"]
margin_top = 28.0
margin_right = 452.0
margin_bottom = 52.0
size_flags_horizontal = 3

[node name="Description" type="Label" parent="Spacer/HBoxContainer/LeftSpace/VBoxContainer/ISNameContainer"]
margin_right = 203.0
margin_bottom = 24.0
size_flags_horizontal = 3
size_flags_vertical = 7
text = "Internal Standard Name"
valign = 1

[node name="ISNameEdit" type="LineEdit" parent="Spacer/HBoxContainer/LeftSpace/VBoxContainer/ISNameContainer"]
margin_left = 207.0
margin_right = 411.0
margin_bottom = 24.0
size_flags_horizontal = 3
size_flags_vertical = 3
align = 1
placeholder_text = "insert IS name"

[node name="Unit" type="Label" parent="Spacer/HBoxContainer/LeftSpace/VBoxContainer/ISNameContainer"]
margin_left = 415.0
margin_right = 452.0
margin_bottom = 24.0
size_flags_vertical = 1
text = "ng/ml"
align = 1
valign = 1
percent_visible = 0.0

[node name="ISAbbreviationContainer2" type="HBoxContainer" parent="Spacer/HBoxContainer/LeftSpace/VBoxContainer"]
margin_top = 56.0
margin_right = 452.0
margin_bottom = 80.0
size_flags_horizontal = 3

[node name="Description" type="Label" parent="Spacer/HBoxContainer/LeftSpace/VBoxContainer/ISAbbreviationContainer2"]
margin_right = 203.0
margin_bottom = 24.0
size_flags_horizontal = 3
size_flags_vertical = 7
text = "Internal Standard Abbreviation"
valign = 1

[node name="ISAbbreviationEdit" type="LineEdit" parent="Spacer/HBoxContainer/LeftSpace/VBoxContainer/ISAbbreviationContainer2"]
margin_left = 207.0
margin_right = 411.0
margin_bottom = 24.0
size_flags_horizontal = 3
size_flags_vertical = 3
align = 1
placeholder_text = "insert IS abbreviation"

[node name="Unit" type="Label" parent="Spacer/HBoxContainer/LeftSpace/VBoxContainer/ISAbbreviationContainer2"]
margin_left = 415.0
margin_right = 452.0
margin_bottom = 24.0
size_flags_vertical = 1
text = "ng/ml"
align = 1
valign = 1
percent_visible = 0.0

[node name="ISContainer" type="HBoxContainer" parent="Spacer/HBoxContainer/LeftSpace/VBoxContainer"]
margin_top = 84.0
margin_right = 452.0
margin_bottom = 108.0
size_flags_horizontal = 3

[node name="Description" type="Label" parent="Spacer/HBoxContainer/LeftSpace/VBoxContainer/ISContainer"]
margin_right = 203.0
margin_bottom = 24.0
hint_tooltip = "Insert the internal standard concentration in ng/ml "
size_flags_horizontal = 3
size_flags_vertical = 7
text = "Internal Standard Concentration"
valign = 1

[node name="ISConcentrationEdit" type="LineEdit" parent="Spacer/HBoxContainer/LeftSpace/VBoxContainer/ISContainer"]
margin_left = 207.0
margin_right = 411.0
margin_bottom = 24.0
hint_tooltip = "Insert the internal standard concentration in ng/ml "
size_flags_horizontal = 3
size_flags_vertical = 3
align = 1
placeholder_text = "insert concentration"

[node name="Unit" type="Label" parent="Spacer/HBoxContainer/LeftSpace/VBoxContainer/ISContainer"]
margin_left = 415.0
margin_right = 452.0
margin_bottom = 24.0
hint_tooltip = "Insert the internal standard concentration in ng/ml "
size_flags_vertical = 1
text = "ng/ml"
align = 1
valign = 1

[node name="ResponseFactorContainer" type="HBoxContainer" parent="Spacer/HBoxContainer/LeftSpace/VBoxContainer"]
margin_top = 112.0
margin_right = 452.0
margin_bottom = 136.0

[node name="Description" type="Label" parent="Spacer/HBoxContainer/LeftSpace/VBoxContainer/ResponseFactorContainer"]
margin_right = 203.0
margin_bottom = 24.0
size_flags_horizontal = 3
size_flags_vertical = 1
text = "Response Factor"
valign = 1

[node name="ISResponseFactorEdit" type="LineEdit" parent="Spacer/HBoxContainer/LeftSpace/VBoxContainer/ResponseFactorContainer"]
margin_left = 207.0
margin_right = 411.0
margin_bottom = 24.0
size_flags_horizontal = 3
size_flags_vertical = 3
align = 1
placeholder_text = "insert factor"

[node name="Unit" type="Label" parent="Spacer/HBoxContainer/LeftSpace/VBoxContainer/ResponseFactorContainer"]
margin_left = 415.0
margin_right = 452.0
margin_bottom = 24.0
size_flags_vertical = 1
text = "ng/ml"
align = 1
valign = 1
percent_visible = 0.0

[node name="ColumnNameContainer" type="HBoxContainer" parent="Spacer/HBoxContainer/LeftSpace/VBoxContainer"]
margin_top = 140.0
margin_right = 452.0
margin_bottom = 164.0
size_flags_horizontal = 3

[node name="Description" type="Label" parent="Spacer/HBoxContainer/LeftSpace/VBoxContainer/ColumnNameContainer"]
margin_right = 203.0
margin_bottom = 24.0
size_flags_horizontal = 3
size_flags_vertical = 7
text = "Column Name"
valign = 1

[node name="ColumnNameEdit" type="LineEdit" parent="Spacer/HBoxContainer/LeftSpace/VBoxContainer/ColumnNameContainer"]
margin_left = 207.0
margin_right = 411.0
margin_bottom = 24.0
size_flags_horizontal = 3
size_flags_vertical = 3
align = 1
placeholder_text = "insert column name"

[node name="Unit" type="Label" parent="Spacer/HBoxContainer/LeftSpace/VBoxContainer/ColumnNameContainer"]
margin_left = 415.0
margin_right = 452.0
margin_bottom = 24.0
size_flags_vertical = 1
text = "ng/ml"
align = 1
valign = 1
percent_visible = 0.0

[node name="RightSpace" type="MarginContainer" parent="Spacer/HBoxContainer"]
margin_left = 456.0
margin_right = 909.0
margin_bottom = 570.0
size_flags_horizontal = 3
size_flags_vertical = 3

[connection signal="text_changed" from="Spacer/HBoxContainer/LeftSpace/VBoxContainer/CompoundNameContainer2/CompoundNameEdit" to="." method="_on_CompoundNameEdit_text_changed"]
[connection signal="text_changed" from="Spacer/HBoxContainer/LeftSpace/VBoxContainer/ISNameContainer/ISNameEdit" to="." method="_on_ISNameEdit_text_changed"]
[connection signal="text_changed" from="Spacer/HBoxContainer/LeftSpace/VBoxContainer/ISAbbreviationContainer2/ISAbbreviationEdit" to="." method="_on_ISAbbreviationEdit_text_changed"]
[connection signal="text_changed" from="Spacer/HBoxContainer/LeftSpace/VBoxContainer/ISContainer/ISConcentrationEdit" to="." method="_on_ISConcentrationEdit_text_changed"]
[connection signal="text_changed" from="Spacer/HBoxContainer/LeftSpace/VBoxContainer/ResponseFactorContainer/ISResponseFactorEdit" to="." method="_on_ISResponseFactorEdit_text_changed"]
[connection signal="text_changed" from="Spacer/HBoxContainer/LeftSpace/VBoxContainer/ColumnNameContainer/ColumnNameEdit" to="." method="_on_ColumnNameEdit_text_changed"]
